feat: adding research methodologies and special topics to agreement model

--- a/backend/data_tools/data/agreements_and_blin_data.json5
+++ b/backend/data_tools/data/agreements_and_blin_data.json5
@@ -1,4 +1,38 @@
 {
+    research_methodology: [
+        {
+            name: "Knowledge Development (Lit Review, Expert Consultations)",
+        },
+        {
+            name: "Research and Evaluation Design (Conceptual Models, Logic Models, CQI, Feasibility, etc.)",
+        },
+        {
+            name: "Descriptive Study (Foundational Research, Process and Implementation Studies, Cost Analyses, etc.)",
+        },
+        {
+            name: "Impact Study",
+        },
+        {
+            name: "Capacity Building (Evaluation Technical Assistance, Researcher-Practitioner Partnerships, Dissertation Grants)",
+        },
+        {
+            name: "Translation and Communication (Evidence Reviews, Meta-analysis, Data Archiving, Conferences)",
+        },
+    ],
+    special_topics: [
+        {
+            name: "Special Topic 1",
+        },
+        {
+            name: "Special Topic 2",
+        },
+        {
+            name: "Special Topic 3",
+        },
+        {
+            name: "Special Topic 4",
+        },
+    ],
     direct_agreement: [
         {
             name: "DIRECT ALLOCATION #2: African American Child and Family Research Center",
@@ -10,6 +44,7 @@
             project_id: 1000,
             awarding_entity_id: 3,
             created_by: 503,
+            special_topics_id: 1,
             team_members: [
                 {
                     tablename: "ops_user",
@@ -22,6 +57,12 @@
                 {
                     tablename: "ops_user",
                     id: 520,
+                },
+            ],
+            research_methodologies: [
+                {
+                    tablename: "research_methodology",
+                    id: 1,
                 },
             ],
         },
@@ -38,6 +79,21 @@
             awarding_entity_id: 3,
             created_by: 503,
             foa: "This is an FOA value",
+            special_topics_id: 2,
+            research_methodologies: [
+                {
+                    tablename: "research_methodology",
+                    id: 1,
+                },
+                {
+                    tablename: "research_methodology",
+                    id: 3,
+                },
+                {
+                    tablename: "research_methodology",
+                    id: 5,
+                },
+            ],
         },
     ],
     iaa_agreement: [
@@ -52,6 +108,17 @@
             awarding_entity_id: 3,
             created_by: 503,
             direction: "OUTGOING",
+            special_topics_id: 3,
+            research_methodologies: [
+                {
+                    tablename: "research_methodology",
+                    id: 2,
+                },
+                {
+                    tablename: "research_methodology",
+                    id: 4,
+                },
+            ],
         },
     ],
     aa_agreement: [
@@ -69,6 +136,17 @@
             servicing_agency_id: 2,
             service_requirement_type: "SEVERABLE",
             created_by: 503,
+            special_topics_id: 4,
+            research_methodologies: [
+                {
+                    tablename: "research_methodology",
+                    id: 3,
+                },
+                {
+                    tablename: "research_methodology",
+                    id: 4,
+                },
+            ],
         },
     ],
     contract_agreement: [
@@ -93,6 +171,17 @@
             end_date: "2044-06-13T14:00:00",
             psc_contract_specialist: "PSC Contract Specialist",
             cotr_id: 520,
+            special_topics_id: 1,
+            research_methodologies: [
+                {
+                    tablename: "research_methodology",
+                    id: 3,
+                },
+                {
+                    tablename: "research_methodology",
+                    id: 4,
+                },
+            ],
         },
         {
             name: "MIHOPE Check-In",
@@ -116,6 +205,17 @@
             end_date: "2044-06-13T14:00:00",
             psc_contract_specialist: "PSC Contract Specialist",
             cotr_id: 520,
+            special_topics_id: 2,
+            research_methodologies: [
+                {
+                    tablename: "research_methodology",
+                    id: 2,
+                },
+                {
+                    tablename: "research_methodology",
+                    id: 5,
+                },
+            ],
         },
         {
             name: "MIHOPE Long-Term",
@@ -138,6 +238,17 @@
             end_date: "2044-06-13T14:00:00",
             psc_contract_specialist: "",
             cotr_id: 520,
+            special_topics_id: 3,
+            research_methodologies: [
+                {
+                    tablename: "research_methodology",
+                    id: 1,
+                },
+                {
+                    tablename: "research_methodology",
+                    id: 6,
+                },
+            ],
         },
         {
             name: "Interoperability Initiatives",
@@ -170,6 +281,17 @@
             end_date: null,
             psc_contract_specialist: "",
             cotr_id: null,
+            special_topics_id: 4,
+            research_methodologies: [
+                {
+                    tablename: "research_methodology",
+                    id: 3,
+                },
+                {
+                    tablename: "research_methodology",
+                    id: 4,
+                },
+            ],
         },
         {
             name: "Contract Workflow Test",
@@ -210,6 +332,17 @@
             end_date: null,
             psc_contract_specialist: "",
             cotr_id: null,
+            special_topics_id: 1,
+            research_methodologies: [
+                {
+                    tablename: "research_methodology",
+                    id: 3,
+                },
+                {
+                    tablename: "research_methodology",
+                    id: 4,
+                },
+            ],
         },
         {
             name: "Support Contract #1",
@@ -242,6 +375,17 @@
             end_date: null,
             psc_contract_specialist: "",
             cotr_id: null,
+            special_topics_id: 2,
+            research_methodologies: [
+                {
+                    tablename: "research_methodology",
+                    id: 3,
+                },
+                {
+                    tablename: "research_methodology",
+                    id: 4,
+                },
+            ],
         },
     ],
     clin: [
@@ -16962,40 +17106,6 @@
             on_hold: false,
             certified: false,
             closed: false,
-        },
-    ],
-    research_methodology: [
-        {
-            name: "Knowledge Development (Lit Review, Expert Consultations)",
-        },
-        {
-            name: "Research and Evaluation Design (Conceptual Models, Logic Models, CQI, Feasibility, etc.)",
-        },
-        {
-            name: "Descriptive Study (Foundational Research, Process and Implementation Studies, Cost Analyses, etc.)",
-        },
-        {
-            name: "Impact Study",
-        },
-        {
-            name: "Capacity Building (Evaluation Technical Assistance, Researcher-Practitioner Partnerships, Dissertation Grants)",
-        },
-        {
-            name: "Translation and Communication (Evidence Reviews, Meta-analysis, Data Archiving, Conferences)",
-        },
-    ],
-    special_topics: [
-        {
-            name: "Special Topic 1",
-        },
-        {
-            name: "Special Topic 2",
-        },
-        {
-            name: "Special Topic 3",
-        },
-        {
-            name: "Special Topic 4",
         },
     ],
     agreement_history: [
