chore: removes maiyerlee 🙁

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # In .github/CODEOWNERS or CODEOWNERS file in root
-* @johndeange @rajohnson90 @fpigeonjr @maiyerlee @Santi-3rd @weimiao67 @josbell
+* @johndeange @rajohnson90 @fpigeonjr @Santi-3rd @weimiao67 @josbell
