feat: add prettier pre-commit hook for frontend code formatting
- Add prettier pre-commit hook to enforce consistent code formatting
- Hook runs on JavaScript, TypeScript, JSON, CSS, SCSS, HTML, and Markdown files in frontend/
- Uses bunx prettier --check --ignore-unknown for validation
- Matches Black formatter pattern for Python - blocks commits with formatting issues
- Developers can fix with 'cd frontend && bun run format' command
- Ensures 100% consistent frontend code formatting across team

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,6 +47,12 @@ repos:
           - css
           - html
         pass_filenames: false
+      - id: prettier
+        name: prettier
+        entry: bash -c 'cd ./frontend/ && bunx prettier --check --ignore-unknown'
+        language: system
+        files: ^frontend/.*\.(js|jsx|ts|tsx|json|css|scss|html|md)$
+        pass_filenames: true
       - id: trufflehog
         name: TruffleHog
         description: Detect secrets in your data.
