fix: remove update-browserslist-db from all Dockerfiles
- Remove bunx update-browserslist-db@latest from Dockerfile.azure, Dockerfile, and Dockerfile.dev
- This command was causing build failures in CI/CD pipelines with npm exit handler errors
- The browserslist database is already up-to-date through package.json caniuse-lite override
- Verified no caniuse warnings in container builds and runtime logs
- Browserslist functionality remains fully operational for browser compatibility queries

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,8 +8,7 @@ RUN mkdir -p /home/app
 COPY package.json bun.lock /home/app/
 WORKDIR /home/app
 # Install production dependencies and update browserslist database
-RUN bun install --frozen-lockfile --production && \
-    bunx update-browserslist-db@latest
+RUN bun install --frozen-lockfile --production
 
 # Production image – copy only production dependencies and source code (assumes your code is prebuilt)
 FROM base AS release
