--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -9,8 +9,7 @@ COPY package.json bun.lock ./
 # Install dependencies and update browserslist database
 # Cache mount persists Bun cache across rebuilds (but not node_modules in dev)
 RUN --mount=type=cache,target=/root/.bun/install/cache \
-    bun install --frozen-lockfile && \
-    bunx update-browserslist-db@latest
+    bun install --frozen-lockfile
 
 # Copy configuration files that change less frequently
 COPY vite.config.mjs eslint.config.js jsconfig.json .babelrc gulpfile.js bunfig.toml .babel-plugin-macrosrc ./
