--- a/frontend/Dockerfile.azure
+++ b/frontend/Dockerfile.azure
@@ -13,8 +13,7 @@ COPY package.json bun.lock ./
 # Install dependencies and update browserslist database
 # Use cache mount to persist Bun cache, but install to local node_modules for reliability
 RUN --mount=type=cache,target=/root/.bun/install/cache \
-    bun install --frozen-lockfile && \
-    bunx update-browserslist-db@latest
+    bun install --frozen-lockfile
 
 # ---- Build Stage ----
 FROM deps as build
