chore: address coPilot feedback

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ FROM base AS prod-deps
 RUN mkdir -p /home/app
 COPY package.json bun.lock /home/app/
 WORKDIR /home/app
-# Install production dependencies and update browserslist database
+# Install production dependencies
 RUN bun install --frozen-lockfile --production
 
 # Production image – copy only production dependencies and source code (assumes your code is prebuilt)
