--- a/backend/data_tools/data/agreements_and_blin_data.json5
+++ b/backend/data_tools/data/agreements_and_blin_data.json5
@@ -44,7 +44,12 @@
             project_id: 1000,
             awarding_entity_id: 3,
             created_by: 503,
-            special_topics_id: 1,
+            special_topics: [
+                {
+                    tablename: "special_topics",
+                    id: 1,
+                },
+            ],
             team_members: [
                 {
                     tablename: "ops_user",
@@ -79,7 +84,12 @@
             awarding_entity_id: 3,
             created_by: 503,
             foa: "This is an FOA value",
-            special_topics_id: 2,
+            special_topics: [
+                {
+                    tablename: "special_topics",
+                    id: 2,
+                },
+            ],
             research_methodologies: [
                 {
                     tablename: "research_methodology",
@@ -108,7 +118,12 @@
             awarding_entity_id: 3,
             created_by: 503,
             direction: "OUTGOING",
-            special_topics_id: 3,
+            special_topics: [
+                {
+                    tablename: "special_topics",
+                    id: 3,
+                },
+            ],
             research_methodologies: [
                 {
                     tablename: "research_methodology",
@@ -136,7 +151,12 @@
             servicing_agency_id: 2,
             service_requirement_type: "SEVERABLE",
             created_by: 503,
-            special_topics_id: 4,
+            special_topics: [
+                {
+                    tablename: "special_topics",
+                    id: 4,
+                },
+            ],
             research_methodologies: [
                 {
                     tablename: "research_methodology",
@@ -171,7 +191,12 @@
             end_date: "2044-06-13T14:00:00",
             psc_contract_specialist: "PSC Contract Specialist",
             cotr_id: 520,
-            special_topics_id: 1,
+            special_topics: [
+                {
+                    tablename: "special_topics",
+                    id: 1,
+                },
+            ],
             research_methodologies: [
                 {
                     tablename: "research_methodology",
@@ -205,7 +230,16 @@
             end_date: "2044-06-13T14:00:00",
             psc_contract_specialist: "PSC Contract Specialist",
             cotr_id: 520,
-            special_topics_id: 2,
+            special_topics: [
+                {
+                    tablename: "special_topics",
+                    id: 2,
+                },
+                {
+                    tablename: "special_topics",
+                    id: 4,
+                },
+            ],
             research_methodologies: [
                 {
                     tablename: "research_methodology",
@@ -238,7 +272,16 @@
             end_date: "2044-06-13T14:00:00",
             psc_contract_specialist: "",
             cotr_id: 520,
-            special_topics_id: 3,
+            special_topics: [
+                {
+                    tablename: "special_topics",
+                    id: 3,
+                },
+                {
+                    tablename: "special_topics",
+                    id: 4,
+                },
+            ],
             research_methodologies: [
                 {
                     tablename: "research_methodology",
@@ -281,7 +324,12 @@
             end_date: null,
             psc_contract_specialist: "",
             cotr_id: null,
-            special_topics_id: 4,
+            special_topics: [
+                {
+                    tablename: "special_topics",
+                    id: 3,
+                },
+            ],
             research_methodologies: [
                 {
                     tablename: "research_methodology",
@@ -332,7 +380,16 @@
             end_date: null,
             psc_contract_specialist: "",
             cotr_id: null,
-            special_topics_id: 1,
+            special_topics: [
+                {
+                    tablename: "special_topics",
+                    id: 1,
+                },
+                {
+                    tablename: "special_topics",
+                    id: 2,
+                },
+            ],
             research_methodologies: [
                 {
                     tablename: "research_methodology",
