chore: added sub services component and improve key assignment in list

--- a/backend/data_tools/data/agreements_and_blin_data.json5
+++ b/backend/data_tools/data/agreements_and_blin_data.json5
@@ -323,10 +323,11 @@
             id: 7,
             number: 1,
             optional: false,
-            description: "Etsy semiotics church key",
+            description: "SC 1.1",
             period_start: "2044-06-13T14:00:00",
             period_end: "2045-06-13T14:00:00",
             agreement_id: 10,
+            sub_component: 1.1,
         },
         {
             id: 8,
@@ -336,6 +337,16 @@
             period_start: "2044-06-13T14:00:00",
             period_end: "2045-06-13T14:00:00",
             agreement_id: 11,
+        },
+        {
+            id: 9,
+            number: 1,
+            optional: false,
+            description: "SC 1.2",
+            period_start: "2044-06-13T14:00:00",
+            period_end: "2045-06-13T14:00:00",
+            agreement_id: 10,
+            sub_component: 1.2,
         },
     ],
     contract_budget_line_item: [
