--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -6,11 +6,10 @@ WORKDIR /home/app
 # This layer will only rebuild when package.json or bun.lock changes
 COPY package.json bun.lock ./
 
-# Install dependencies and update browserslist database
+# Install dependencies
 # Cache mount persists Bun cache across rebuilds (but not node_modules in dev)
 RUN --mount=type=cache,target=/root/.bun/install/cache \
-    bun install --frozen-lockfile && \
-    bunx update-browserslist-db@latest
+    bun install --frozen-lockfile
 
 # Copy configuration files that change less frequently
 COPY vite.config.mjs eslint.config.js jsconfig.json .babelrc gulpfile.js bunfig.toml .babel-plugin-macrosrc ./
