--- a/frontend/package.json
+++ b/frontend/package.json
@@ -90,9 +90,10 @@
         "start:debug": "bunx --bun vite --inspect=0.0.0.0:9229",
         "build": "bunx --bun vite build",
         "format": "prettier --write 'src/**/*' '!src/uswds/**'",
-        "test": "vitest",
-        "test:coverage": "vitest run --coverage",
-        "test:ui": "vitest --ui --coverage.enabled=true",
+        "test:base": "NODE_OPTIONS='--max-old-space-size=6144' vitest",
+        "test": "npm run test:base",
+        "test:coverage": "npm run test:base -- run --coverage",
+        "test:ui": "npm run test:base -- --ui --coverage.enabled=true",
         "test:e2e:interactive": "cypress open --config-file ./cypress.config.js",
         "test:e2e": "cypress run --config-file ./cypress.config.js --headless",
         "test:e2e:ci": "cypress run --config-file ./cypress.config.ci.js --headless",
