refactor: enhance CAN retrieval and filtering logic, add health checks for services

--- a/.github/actions/run-full-stack/action.yml
+++ b/.github/actions/run-full-stack/action.yml
@@ -11,3 +11,24 @@ runs:
         export JWT_PRIVATE_KEY="${{ env.JWT_PRIVATE_KEY }}"
         docker compose -f docker-compose.static.yml down -v
         docker compose -f docker-compose.static.yml up --build -d
+
+    - name: Wait for services to be healthy
+      shell: bash
+      run: |
+        echo "Waiting for backend to be healthy..."
+        timeout 120 sh -c 'until docker compose -f docker-compose.static.yml ps | grep -q "backend.*healthy"; do sleep 2; done' || {
+          echo "Backend healthcheck failed"
+          docker compose -f docker-compose.static.yml ps
+          docker compose -f docker-compose.static.yml logs backend
+          exit 1
+        }
+
+        echo "Waiting for frontend to be ready..."
+        timeout 60 sh -c 'until curl -f http://localhost:3000 > /dev/null 2>&1; do sleep 2; done' || {
+          echo "Frontend failed to start"
+          docker compose -f docker-compose.static.yml ps
+          docker compose -f docker-compose.static.yml logs frontend-static
+          exit 1
+        }
+
+        echo "All services are ready!"
