--- a/backend/data_tools/data/agreements_and_blin_data.json5
+++ b/backend/data_tools/data/agreements_and_blin_data.json5
@@ -348,6 +348,15 @@
             agreement_id: 10,
             sub_component: 1.2,
         },
+        {
+            id: 10,
+            number: 1,
+            optional: false,
+            description: "the og SC 1",
+            period_start: "2044-06-13T14:00:00",
+            period_end: "2045-06-13T14:00:00",
+            agreement_id: 10,
+        },
     ],
     contract_budget_line_item: [
         {
