feat: adding history messages for Research Methodology and SPecial Topics

--- a/backend/data_tools/data/ops_event.json5
+++ b/backend/data_tools/data/ops_event.json5
@@ -6501,5 +6501,116 @@
             created_by: 516,
             created_on: "2025-01-29T14:43:53.928887Z",
         },
+        {
+            // 67 change the research type and special topic
+            event_type: "UPDATE_AGREEMENT",
+            event_status: "SUCCESS",
+            event_details: {
+                "request.json": {
+                    name: "CONTRACT #2: Fathers and Continuous Learning (FCL)",
+                    notes: "",
+                    vendor: "Vendor 1",
+                    cotr_id: 520,
+                    end_date: "2044-06-13",
+                    nick_name: null,
+                    po_number: null,
+                    vendor_id: 100,
+                    project_id: 1002,
+                    start_date: "2043-06-13",
+                    description: "Test description",
+                    maps_sys_id: null,
+                    display_name: "CONTRACT #2: Fathers and Continuous Learning (FCL)",
+                    team_leaders: ["Amelia Popham"],
+                    team_members: [],
+                    contract_type: "FIRM_FIXED_PRICE",
+                    agreement_type: "CONTRACT",
+                    special_topics: [
+                        {
+                            id: 3,
+                            name: "Special Topic 3",
+                        },
+                    ],
+                    contract_number: "XXXX000000006",
+                    acquisition_type: null,
+                    agreement_reason: "NEW_REQ",
+                    delivered_status: false,
+                    support_contacts: [],
+                    contract_category: "RESEARCH",
+                    task_order_number: null,
+                    awarding_entity_id: 4,
+                    division_directors: ["Dave Director"],
+                    project_officer_id: 500,
+                    servicing_agency_id: null,
+                    requesting_agency_id: null,
+                    research_methodologies: [
+                        {
+                            id: 3,
+                            name: "Descriptive Study",
+                        },
+                        {
+                            id: 1,
+                            name: "Knowledge Development",
+                        },
+                    ],
+                    product_service_code_id: 1,
+                    psc_contract_specialist: "PSC Contract Specialist",
+                    service_requirement_type: null,
+                    alternate_project_officer_id: 522,
+                },
+                "request.values": {},
+                "request.headers": {
+                    Host: "localhost:8080",
+                    Accept: "application/json",
+                    Origin: "http://localhost:3000",
+                    Referer: "http://localhost:3000/",
+                    "Sec-Ch-Ua": '"Google Chrome";v="143", "Chromium";v="143", "Not A(Brand";v="24"',
+                    Connection: "keep-alive",
+                    "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/143.0.0.0 Safari/537.36",
+                    "Content-Type": "application/json",
+                    Authorization: "Bearer Token",
+                    "Content-Length": "1093",
+                    "Sec-Fetch-Dest": "empty",
+                    "Sec-Fetch-Mode": "cors",
+                    "Sec-Fetch-Site": "same-site",
+                    "Accept-Encoding": "gzip, deflate, br, zstd",
+                    "Accept-Language": "en-US,en;q=0.9",
+                    "Sec-Ch-Ua-Mobile": "?0",
+                    "Sec-Ch-Ua-Platform": '"macOS"',
+                },
+                agreement_updates: {
+                    changes: {
+                        updated_by: {
+                            new_value: 520,
+                            old_value: null,
+                        },
+                        updated_on: {
+                            new_value: "2025-12-03T15:41:03.247955Z",
+                            old_value: "2025-12-03T15:38:10.705404Z",
+                        },
+                        updated_by_user: {
+                            new_value: {
+                                id: 520,
+                                full_name: "System Owner",
+                            },
+                            old_value: null,
+                        },
+                    },
+                    owner_id: 6,
+                    updated_by: 520,
+                    special_topic_changes: {
+                        special_topics_ids_added: [3],
+                        special_topics_ids_removed: [1],
+                    },
+                    research_methodology_changes: {
+                        research_methodologies_ids_added: [1],
+                        research_methodologies_ids_removed: [4],
+                    },
+                },
+                "request.remote_addr": "10.89.0.37",
+                "request.remote_user": null,
+            },
+            created_by: 516,
+            created_on: "2025-01-30T14:43:53.928887Z",
+        },
     ],
 }
