feat: add procurement action data model and update import data configuration

--- a/backend/data_tools/data/agreements_and_blin_data.json5
+++ b/backend/data_tools/data/agreements_and_blin_data.json5
@@ -17275,4 +17275,51 @@
             history_type: "AGREEMENT_CREATED",
         },
     ],
+    procurement_action: [
+        {
+            agreement_id: 1,
+            award_type: "NEW_AWARD",
+            status: "AWARDED",
+            date_awarded_obligated: "2042-10-01",
+            need_by_date: "2042-10-01",
+            action_description: "Initial award for Contract #1: African American Child and Family Research Center",
+            created_by: 503,
+        },
+        {
+            agreement_id: 2,
+            award_type: "NEW_AWARD",
+            status: "AWARDED",
+            date_awarded_obligated: "2042-10-01",
+            need_by_date: "2042-10-01",
+            action_description: "Initial award for DIRECT ALLOCATION #2: African American Child and Family Research Center",
+            created_by: 503,
+        },
+        {
+            agreement_id: 7,
+            award_type: "NEW_AWARD",
+            status: "AWARDED",
+            date_awarded_obligated: "2042-10-01",
+            need_by_date: "2042-10-01",
+            action_description: "Initial award for MIHOPE Check-In",
+            created_by: 503,
+        },
+        {
+            agreement_id: 8,
+            award_type: "NEW_AWARD",
+            status: "AWARDED",
+            date_awarded_obligated: "2042-10-01",
+            need_by_date: "2042-10-01",
+            action_description: "Initial award for MIHOPE Long-Term",
+            created_by: 503,
+        },
+        {
+            agreement_id: 10,
+            award_type: "NEW_AWARD",
+            status: "AWARDED",
+            date_awarded_obligated: "2042-10-01",
+            need_by_date: "2042-10-01",
+            action_description: "Initial award for Contract Workflow Test",
+            created_by: 503,
+        },
+    ],
 }
