--- a/frontend/.prettierignore
+++ b/frontend/.prettierignore
@@ -9,6 +9,15 @@ node_modules/
 # USWDS (generated files)
 src/uswds/
 
+# Images and binary files
+*.svg
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.ico
+*.webp
+
 # Other generated files
 *.min.js
 *.min.css
