fix: resolve data_tools Black formatting CI/CD errors
- Add missing pipenv install step for data_tools in CI workflow
- Apply Black formatting to 6 files in data_tools directory
- Ensure data_tools dependencies are installed before running formatting checks

Fixes 'black: not found' error in GitHub Actions pipeline.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,10 @@ jobs:
         working-directory: ./backend/ops_api
         run: pipenv run isort --settings-file ./pyproject.toml --check-only --filter-files ops tests ./noxfile.py ../../performance_tests/locustfile.py
 
+      - name: Install data_tools dependencies
+        working-directory: ./backend/data_tools
+        run: pipenv install --dev
+
       - name: Check data_tools formatting (Black)
         working-directory: ./backend/data_tools
         run: pipenv run black --config ./pyproject.toml --check .
