chore: adds awarded AA Agreement
needed for e2e tests

--- a/backend/data_tools/data/agreements_and_blin_data.json5
+++ b/backend/data_tools/data/agreements_and_blin_data.json5
@@ -174,6 +174,49 @@
                 },
             ],
         },
+        {
+            name: "Partner-AA #2: Early Childhood Development Research Collaboration",
+            nick_name: "PARTNER-AA2",
+            description: "Multi-agency collaborative research initiative focused on early childhood development programs and their long-term outcomes. This partner agreement facilitates knowledge sharing between federal agencies and supports evidence-based policy development.",
+            product_service_code_id: 1,
+            agreement_reason: "NEW_REQ",
+            project_officer_id: 500,
+            agreement_type: "AA",
+            project_id: 1001,
+            awarding_entity_id: 3,
+            requesting_agency_id: 1,
+            servicing_agency_id: 2,
+            service_requirement_type: "SEVERABLE",
+            contract_type: "FIRM_FIXED_PRICE",
+            vendor_id: 100,
+            contract_number: "PARTNERAA000002",
+            delivered_status: false,
+            created_by: 503,
+            special_topics: [
+                {
+                    tablename: "special_topics",
+                    id: 2,
+                },
+                {
+                    tablename: "special_topics",
+                    id: 3,
+                },
+            ],
+            research_methodologies: [
+                {
+                    tablename: "research_methodology",
+                    id: 1,
+                },
+                {
+                    tablename: "research_methodology",
+                    id: 2,
+                },
+                {
+                    tablename: "research_methodology",
+                    id: 5,
+                },
+            ],
+        },
     ],
     contract_agreement: [
         {
@@ -17180,6 +17223,53 @@
             closed: false,
         },
     ],
+    aa_budget_line_item: [
+        {
+            budget_line_item_type: "AA",
+            line_description: "Research Coordination Services",
+            comments: "Initial funding for multi-agency research collaboration",
+            can_id: 504,
+            created_by: 503,
+            agreement_id: 4,
+            amount: 750000.0,
+            status: "PLANNED",
+            date_needed: "2043-03-01T14:00:00",
+            proc_shop_fee_percentage: 5.0,
+            on_hold: false,
+            certified: false,
+            closed: false,
+        },
+        {
+            budget_line_item_type: "AA",
+            line_description: "Data Analysis and Reporting",
+            comments: "Support for early childhood development research analysis",
+            can_id: 507,
+            created_by: 503,
+            agreement_id: 6,
+            amount: 1200000.0,
+            status: "OBLIGATED",
+            date_needed: "2043-06-01T14:00:00",
+            proc_shop_fee_percentage: 4.8,
+            on_hold: false,
+            certified: false,
+            closed: false,
+        },
+        {
+            budget_line_item_type: "AA",
+            line_description: "Research Implementation Support",
+            comments: "Technical assistance for collaborative research initiatives",
+            can_id: 509,
+            created_by: 503,
+            agreement_id: 6,
+            amount: 800000.0,
+            status: "DRAFT",
+            date_needed: "2043-09-15T14:00:00",
+            proc_shop_fee_percentage: 4.5,
+            on_hold: false,
+            certified: false,
+            closed: false,
+        },
+    ],
     agreement_history: [
         {
             agreement_id: 11,
@@ -17325,6 +17415,24 @@
             date_awarded_obligated: "2042-10-01",
             need_by_date: "2042-10-01",
             action_description: "Initial award for Contract Workflow Test",
+            created_by: 503,
+        },
+        {
+            agreement_id: 4,
+            award_type: "NEW_AWARD",
+            status: "AWARDED",
+            date_awarded_obligated: "2042-12-15",
+            need_by_date: "2042-12-15",
+            action_description: "Initial award for AA #1: Fathers and Continuous Learning (FCL)",
+            created_by: 503,
+        },
+        {
+            agreement_id: 6,
+            award_type: "NEW_AWARD",
+            status: "AWARDED",
+            date_awarded_obligated: "2043-01-10",
+            need_by_date: "2043-01-10",
+            action_description: "Initial award for Partner-AA #2: Early Childhood Development Research Collaboration",
             created_by: 503,
         },
     ],
