--- a/.github/workflows/prod_be_build_and_deploy.yml
+++ b/.github/workflows/prod_be_build_and_deploy.yml
@@ -46,7 +46,8 @@ jobs:
 
   deploy-data-tools:
     needs: build-data-tools
-
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
@@ -69,7 +70,8 @@ jobs:
 
   deploy-backend:
     needs: build-backend
-
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
