--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,123 +1,128 @@
 {
-    "name": "opre-ops",
-    "version": "1.0.1",
-    "license": "CC0-1.0",
-    "private": true,
-    "type": "module",
-    "dependencies": {
-        "@azure/storage-blob": "12.29.1",
-        "@fortawesome/fontawesome-svg-core": "6.7.2",
-        "@fortawesome/free-regular-svg-icons": "6.7.2",
-        "@fortawesome/free-solid-svg-icons": "6.7.2",
-        "@fortawesome/react-fontawesome": "0.2.6",
-        "@nivo/bar": "0.99.0",
-        "@nivo/core": "0.99.0",
-        "@nivo/pie": "0.99.0",
-        "@reduxjs/toolkit": "2.9.2",
-        "@uswds/uswds": "3.13.0",
-        "axios": "1.13.2",
-        "clsx": "2.1.1",
-        "crypto-random-string": "5.0.0",
-        "jose": "6.1.3",
-        "js-cookie": "3.0.5",
-        "jwt-decode": "4.0.0",
-        "lodash": "4.17.21",
-        "react": "18.3.1",
-        "react-currency-format": "1.1.0",
-        "react-dom": "18.3.1",
-        "react-markdown": "10.1.0",
-        "react-modal": "3.16.3",
-        "react-redux": "9.2.0",
-        "react-router-dom": "7.12.0",
-        "react-select": "5.10.2",
-        "react-slider": "2.0.6",
-        "react-spinners": "0.17.0",
-        "rehype-raw": "7.0.0",
-        "remark-gfm": "4.0.1",
-        "sass": "1.93.3",
-        "styled-components": "6.1.19",
-        "vest": "5.4.6",
-        "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
-    },
-    "overrides": {
-        "rollup": "4.52.5",
-        "caniuse-lite": "1.0.30001764"
-    },
-    "devDependencies": {
-        "@eslint/compat": "2.0.1",
-        "@eslint/js": "9.39.2",
-        "@testing-library/jest-dom": "6.9.1",
-        "@testing-library/react": "16.3.1",
-        "@testing-library/user-event": "14.6.1",
-        "@types/testing-library__jest-dom": "6.0.0",
-        "@types/testing-library__react": "10.2.0",
-        "@uswds/compile": "1.3.1",
-        "@vitejs/plugin-react": "5.1.2",
-        "@vitest/coverage-istanbul": "3.2.4",
-        "@vitest/eslint-plugin": "1.4.4",
-        "@vitest/ui": "3.2.4",
-        "axe-core": "4.11.1",
-        "cypress": "15.5.0",
-        "cypress-axe": "1.7.0",
-        "cypress-localstorage-commands": "2.2.8",
-        "eslint": "9.39.2",
-        "eslint-config-prettier": "10.1.8",
-        "eslint-plugin-cypress": "5.2.1",
-        "eslint-plugin-import": "2.32.0",
-        "eslint-plugin-jsx-a11y": "6.10.2",
-        "eslint-plugin-prettier": "5.5.5",
-        "eslint-plugin-react": "7.37.5",
-        "eslint-plugin-react-hooks": "5.2.0",
-        "eslint-plugin-react-refresh": "0.4.26",
-        "eslint-plugin-testing-library": "7.13.6",
-        "globals": "17.0.0",
-        "history": "5.3.0",
-        "jsdom": "26.1.0",
-        "msw": "2.11.6",
-        "prettier": "3.6.2",
-        "redux-mock-store": "1.5.5",
-        "sass-loader": "16.0.6",
-        "semantic-release": "25.0.2",
-        "vite": "7.1.12",
-        "vite-jsconfig-paths": "2.0.1",
-        "vite-plugin-babel-macros": "1.0.6",
-        "vite-plugin-eslint": "1.8.1",
-        "vite-plugin-svgr": "4.5.0",
-        "vitest": "3.2.4"
-    },
-    "scripts": {
-        "start": "bunx --bun vite",
-        "start:debug": "bunx --bun vite --inspect=0.0.0.0:9229",
-        "build": "bunx --bun vite build",
-        "format": "prettier --write --ignore-unknown 'src/**/*' '!src/uswds/**'",
-        "test": "vitest",
-        "test:coverage": "vitest run --coverage",
-        "test:ui": "vitest --ui --coverage.enabled=true",
-        "test:e2e:interactive": "cypress open --config-file ./cypress.config.js",
-        "test:e2e": "cypress run --config-file ./cypress.config.js --headless",
-        "test:e2e:ci": "cypress run --config-file ./cypress.config.ci.js --headless",
-        "test:e2e:debug": "DEBUG=cypress:* cypress run --config-file ./cypress.config.js --headless",
-        "lint": "eslint './src/**' './cypress/**'",
-        "lint:src": "eslint './src/**'",
-        "lint:cypress": "eslint './cypress/**'",
-        "cypress:open": "cypress open",
-        "uswds:update": "bunx gulp compile"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "babelMacros": {
-        "fontawesome-svg-core": {
-            "license": "free"
-        }
+  "name": "opre-ops",
+  "version": "1.0.1",
+  "license": "CC0-1.0",
+  "private": true,
+  "type": "module",
+  "dependencies": {
+    "@azure/storage-blob": "12.29.1",
+    "@fortawesome/fontawesome-svg-core": "6.7.2",
+    "@fortawesome/free-regular-svg-icons": "6.7.2",
+    "@fortawesome/free-solid-svg-icons": "6.7.2",
+    "@fortawesome/react-fontawesome": "0.2.6",
+    "@nivo/bar": "0.99.0",
+    "@nivo/core": "0.99.0",
+    "@nivo/pie": "0.99.0",
+    "@reduxjs/toolkit": "2.9.2",
+    "@uswds/uswds": "3.13.0",
+    "axios": "1.13.2",
+    "clsx": "2.1.1",
+    "crypto-random-string": "5.0.0",
+    "jose": "6.1.3",
+    "js-cookie": "3.0.5",
+    "jwt-decode": "4.0.0",
+    "lodash": "4.17.21",
+    "react": "18.3.1",
+    "react-currency-format": "1.1.0",
+    "react-dom": "18.3.1",
+    "react-markdown": "10.1.0",
+    "react-modal": "3.16.3",
+    "react-redux": "9.2.0",
+    "react-router-dom": "7.12.0",
+    "react-select": "5.10.2",
+    "react-slider": "2.0.6",
+    "react-spinners": "0.17.0",
+    "rehype-raw": "7.0.0",
+    "remark-gfm": "4.0.1",
+    "sass": "1.93.3",
+    "styled-components": "6.1.19",
+    "vest": "5.4.6",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
+  },
+  "overrides": {
+    "rollup": "4.52.5",
+    "caniuse-lite": "1.0.30001764"
+  },
+  "devDependencies": {
+    "@eslint/compat": "2.0.1",
+    "@eslint/js": "9.39.2",
+    "@testing-library/jest-dom": "6.9.1",
+    "@testing-library/react": "16.3.1",
+    "@testing-library/user-event": "14.6.1",
+    "@types/testing-library__jest-dom": "6.0.0",
+    "@types/testing-library__react": "10.2.0",
+    "@uswds/compile": "1.3.1",
+    "@vitejs/plugin-react": "5.1.2",
+    "@vitest/coverage-istanbul": "3.2.4",
+    "@vitest/eslint-plugin": "1.4.4",
+    "@vitest/ui": "3.2.4",
+    "axe-core": "4.11.1",
+    "cypress": "15.5.0",
+    "cypress-axe": "1.7.0",
+    "cypress-localstorage-commands": "2.2.8",
+    "eslint": "9.39.2",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-cypress": "5.2.1",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-prettier": "5.5.5",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-react-refresh": "0.4.26",
+    "eslint-plugin-testing-library": "7.13.6",
+    "globals": "17.0.0",
+    "history": "5.3.0",
+    "jsdom": "26.1.0",
+    "msw": "^2.12.7",
+    "prettier": "3.6.2",
+    "redux-mock-store": "1.5.5",
+    "sass-loader": "16.0.6",
+    "semantic-release": "25.0.2",
+    "vite": "7.1.12",
+    "vite-jsconfig-paths": "2.0.1",
+    "vite-plugin-babel-macros": "1.0.6",
+    "vite-plugin-eslint": "1.8.1",
+    "vite-plugin-svgr": "4.5.0",
+    "vitest": "3.2.4"
+  },
+  "scripts": {
+    "start": "bunx --bun vite",
+    "start:debug": "bunx --bun vite --inspect=0.0.0.0:9229",
+    "build": "bunx --bun vite build",
+    "format": "prettier --write --ignore-unknown 'src/**/*' '!src/uswds/**'",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui --coverage.enabled=true",
+    "test:e2e:interactive": "cypress open --config-file ./cypress.config.js",
+    "test:e2e": "cypress run --config-file ./cypress.config.js --headless",
+    "test:e2e:ci": "cypress run --config-file ./cypress.config.ci.js --headless",
+    "test:e2e:debug": "DEBUG=cypress:* cypress run --config-file ./cypress.config.js --headless",
+    "lint": "eslint './src/**' './cypress/**'",
+    "lint:src": "eslint './src/**'",
+    "lint:cypress": "eslint './cypress/**'",
+    "cypress:open": "cypress open",
+    "uswds:update": "bunx gulp compile"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "babelMacros": {
+    "fontawesome-svg-core": {
+      "license": "free"
     }
+  },
+  "msw": {
+    "workerDirectory": [
+      "frontend/public"
+    ]
+  }
 }
