chore: update package version and integrity checksum in mockServiceWorker.js

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -122,7 +122,8 @@
     },
     "msw": {
         "workerDirectory": [
-            "frontend/public"
+            "frontend/public",
+            "public"
         ]
     }
 }
