--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,7 @@ services:
     environment:
       - REACT_APP_BACKEND_DOMAIN=http://localhost:8080
       - VITE_BACKEND_DOMAIN=http://localhost:8080
-      - VITE_ENABLE_MSW=true
+      - VITE_ENABLE_MSW=false
       - WATCHPACK_POLLING=true
       - CHOKIDAR_USEPOLLING=true
     ports:
